--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "next": "13.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "reactstrap": "^9.1.5"
   },
   "devDependencies": {
     "eslint": "8.30.0",
