--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "reactstrap": "^9.1.5"
+    "reactstrap": "^9.1.5",
+    "sass": "^1.57.0"
   },
   "devDependencies": {
     "eslint": "8.30.0",
