--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-custom-inputs": "^1.8.15",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.57.0"
   },
