--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@headlessui/react": "^1.7.7",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.1",
+    "@uiw/react-md-editor": "^3.6.0",
+    "@zeit/next-css": "^1.0.1",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "easymde": "^2.18.0",
     "next": "13.0.7",
+    "next-remove-imports": "^1.0.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-custom-inputs": "^1.8.15",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.57.0",
