--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.57.0",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.6.16",
     "sweetalert2-react-content": "^5.0.7"
   },
